<resources>
    <string name="app_name">Brain Complain</string>
    <string name="ask_watson">Ask Watson</string>
    <string name="maps_psych">Search for Psychiatrists Near You</string>
    <string name="call_SAMHSA">Call the SAMHSA Treatment Referral Helpline</string>
    <string name="SAMHSA_number">18777264727</string>
    <string name="quit">Quit</string>
    <string name="user_id">utep_student17</string>
    <string name="user_password">RE7T4I2j</string>
    <string name="user_watson_server_instance">https://watson-wdc01.ihost.com/instance/530/deepqa/v1/question</string>
    <string name="watson_instructions">Type a question for Watson in the input box below.</string>
    <string name="watson_answer_title">Answer:</string>
    <string name="title_activity_watson_diagnose">Watson Diagnoser</string>
    <string name="action_settings">Settings</string>
    <string name="SymptomDefault">Symptom</string>
    <string name="SubmitButtonText">Submit</string>
    <string name="DurationText">Months</string>
    <string name="WatsonResponseDefault">Watson Response</string>
    <string name="DiagnosisList">paranoid personality disorder,schizoid personality disorder,schizotypal personality disorder,antisocial personality disorder,borderline personality disorder,histrionic personality disorder,narcissistic personality disorder, avoidant personality disorder,dependent personality disorder,obsessive compulsive personality disorder,brief psychotic disorder,schizophreniform disorder,schizophrenia,schizoaffective disorder,substance/medication-induced psychotic disorder,psychotic disorder due to another medical condition,catatonia,catatonic disorder due to another medical condition,other specified schizophrenia spectrum and other psychotic disorder,unspecified schizophrenia spectrum and other psychotic disorder,insomnia disorder,hyper somnolence disorder,narcolepsy,obstructive sleep apnea hypopnea,central sleep apnea,sleep-related hypoventilation,circadian rhythm sleep-wake disorders,advanced sleep phase type,irregular sleep-wake type,non-24-hour sleep-wake type,shift work type,sleep arousal disorders, nightmare disorder,rapid eye movement sleep behavior disorder,restless legs syndrome,substance/medication-induced sleep disorder,other specified insomnia disorder,unspecified insomnia disorder, other specified hypersomnolence disorder, unspecified hypersomnolence disorder,other specified sleep-wake disorder,unspecified sleep-wake disorder,delayed ejaculation,erectile disorder,female orgasmic disorder,female sexual interest/arousal disorder,genito-pelvic pain/penetration disorder,male hypoactive sexual desire disorder,premature (early) ejaculation,substance/medication-induced sexual dysfunction,other specified sexual dysfunction,unspecified sexual dysfunction,separation anxiety disorder,selective mutism,specific phobia,social anxiety disorder (social phobia),panic disorder,panic attack specifier,agoraphobia,generalized anxiety disorder,substance/medication-induced anxiety disorder,anxiety disorder due to another medical condition,disruptive mood disorder,major depressive disorder,persistent depressive disorder (dysthymia),premenstrual dysphoric disorder,substance/medication-induced depressive disorder</string>
</resources>
